[package]
name = "ciqadamq"
version = "0.2.0"
edition = "2024"
description = "Clustered MQTT broker built on RMQTT with a REST API for user management, per-user topic ACLs, and message expiry"
authors = ["Tadas Talaikis <talaikis.tadas@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyperiondb/ciqadamq"
homepage = "https://github.com/hyperiondb/ciqadamq"
readme = "README.md"
keywords = ["mqtt", "broker", "rmqtt", "cluster", "messaging"]
categories = ["network-programming", "asynchronous"]
exclude = [
    "docker/",
    "scripts/",
    "docker-compose.yml",
    "Dockerfile",
    ".dockerignore",
    "perf-results.*",
    "performance.png",
    "data/",
]

[features]
perf = ["dep:rumqttc", "dep:reqwest"]

[[bin]]
name = "ciqadamq"
path = "src/main.rs"

[[bin]]
name = "perf"
path = "src/bin/perf.rs"
required-features = ["perf"]

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.4", optional = true, default-features = false, features = ["json"] }
rumqttc = { version = "0.25.1", optional = true, default-features = false }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
env_logger = "0.11.10"
log = "0.4.32"
rmqtt = { version = "0.21.0", features = ["ws", "plugin", "auto-subscription", "grpc", "shared-subscription"] }
rmqtt-auth-http = "0.21.0"
rmqtt-cluster-raft = "0.21.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
portpicker = "0.1.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rumqttc = { version = "0.25.1", default-features = false, features = ["url", "websocket"] }
