[package]
name = "ciqadamq"
version = "0.6.5"
edition = "2024"
description = "Clustered MQTT broker built on RMQTT with a REST API for user management, per-user topic ACLs, and message expiry"
authors = ["Tadas Talaikis <info@nordlet.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/hyperiondb/ciqadamq"
homepage="https://hyperiondb.eu/"
readme = "README.md"

keywords = ["mqtt", "broker", "rmqtt", "cluster", "messaging"]
categories = ["network-programming", "asynchronous"]
exclude = [
    "docker/",
    "scripts/",
    "docker-compose.yml",
    "Dockerfile",
    ".dockerignore",
    "perf-results.*",
    "perf-resources.*",
    "performance.png",
    "data/",
]

[features]
perf = ["dep:rumqttc"]

[[bin]]
name = "ciqadamq"
path = "src/main.rs"

[[bin]]
name = "perf"
path = "src/bin/perf.rs"
required-features = ["perf"]

[[bin]]
name = "perf-resources"
path = "src/bin/perf_resources.rs"
required-features = ["perf"]

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rumqttc = { version = "0.25.1", optional = true, default-features = false }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
bincode = { version = "2.0.1", features = ["serde"] }
env_logger = "0.11.10"
hmac = "0.13.0"
log = "0.4.32"
mimalloc = "0.1.52"
redb = "4.1.0"
rmqtt = { version = "0.21.0", features = ["ws", "plugin", "auto-subscription", "grpc", "shared-subscription", "msgstore"] }
rmqtt-cluster-raft = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
portpicker = "0.1.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rumqttc = { version = "0.25.1", default-features = false, features = ["url", "websocket"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
rmqtt-cluster-raft = { path = "vendor/rmqtt-cluster-raft" }
rmqtt = { path = "vendor/rmqtt" }
